--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@
   }
   
   header nav {
-    margin: 7px 0;
+    margin: 15px 0;
   }
   
   header nav ul {
@@ -86,6 +86,65 @@
     border-radius: 15px;
     text-shadow: none;
   }
+
+  /* WHAT YOU DO STYLES START */
+.steps { 
+  background: var(--primary-color);
+}
+
+.step {
+  margin: 50px auto;
+  padding-bottom: 50px;
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.step h3 {
+  color: var(--secondary-color);
+  font-size: 46px;
+  flex: 1 30%;
+}
+
+.step-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.step-img {
+  flex: 1 12%;
+  margin-right: 20px;
+}
+
+.step-img img {
+  max-width: 100%;
+}
+
+.step-text {
+  flex: 12;
+}
+
+.step-text p {
+  color: var(--tertiary-color);
+  font-size: 18px;
+}
+
+.step-text h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: var(--secondary-color);
+}
+
+.step:not(:last-child) {
+  border-bottom: 1px solid var(--tertiary-color);
+}
+
+/* WHAT YOU DO STYLES END */
+
   
       
   /* footer styles start */
