updated media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -576,7 +576,8 @@
     header {
       padding-bottom: 0;
       justify-content: center;
-      position: relative;
+      /* position: relative; */
+      position: sticky !important;
   }
   
   header h1 {
@@ -624,6 +625,14 @@
   
   /* media queries for tablets and mobile phones *OK* */
   @media screen and (max-width: 768px) {
+    
+    header {
+        /* padding-bottom: 0; */
+        /* justify-content: center; */
+        /* position: relative; */
+        position: sticky !important;
+    }
+    
     section {
       padding: 30px 15px;
     }
@@ -659,6 +668,7 @@
   
   .header {
     margin-right: -82PX !important;
+    position: sticky !important;
   }
   
   .hero {
@@ -719,6 +729,7 @@
       padding: 20px 5px;
       background-position: 100% !important;
       margin-right: 5px !important;
+      position: sticky !important;
     }
   
     .hero {
@@ -782,6 +793,10 @@
   /* media queries for mobile phones and smaller *OK* */
   @media screen and (max-width: 375px) {
   
+    .header {
+       position: sticky !important;
+      }
+   
     .hero-form button {
       width: 100%;
     }
